--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -8,6 +8,8 @@
         <meta name="author" content="" />
         <title>Dashboard - Admin</title>
         <!-- Add Bootstrap CSS link -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
@@ -94,7 +96,7 @@
 
                                 <!-- Super Distributor Section -->
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseSuperDistributor" aria-expanded="false" aria-controls="collapseSuperDistributor">
-                                    <div class="sb-nav-link-icon"><i class="fas fa-network-wired"></i></div>
+                                    <div class="sb-nav-link-icon"><i class="fas fa-warehouse"></i></div>
                                     Super Distributor
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
@@ -148,7 +150,8 @@
                                 </a>
                             </nav>
                         </div>
-</div>
+                        </div>
+                        
                         <div class="sb-sidenav-footer">
                             <div class="small">Logged in as:</div>
                             {{ role }}
