--- a/templates/admin/edit_profile.html
+++ b/templates/admin/edit_profile.html
@@ -38,9 +38,11 @@
                 <div class="sd-row">
                     <input name="contact" type="text" value="{{ user.contact }}" required>
                 </div>
-                <div class="sd-row">
-                    <label for="password" class="form-label">Password (Leave blank if unchanged)</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                <div class="sd-row password-wrapper">
+                    <input id="password" name="password" type="password" placeholder="Password">
+                    <span class="eye-icon" onclick="togglePassword()">
+                        <i id="eye-icon" class="fa fa-eye"></i>
+                    </span>
                 </div>
                 <div class="sd-row">
                     <label for="image" class="form-label">Profile Image (Optional)</label>
