--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -8,6 +8,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Login</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="static/css/styles.css" rel="stylesheet" />       
@@ -27,7 +28,6 @@
 
         </style>
     </head>
-    
     <body class="bg-info">
         <div id="layoutAuthentication">
             <div id="layoutAuthentication_content">
@@ -66,14 +66,15 @@
                                                 <input name="email" class="form-control" id="inputEmail" type="text" placeholder="name@example.com" />
                                                 <label for="inputEmail">Email</label>
                                             </div>
-                                            <div class="form-floating mb-3">
+                                            <div class="form-floating mb-3 password-wrapper">
                                                 <input name="password" class="form-control" id="inputPassword" type="password" placeholder="Password" />
                                                 <label for="inputPassword">Password</label>
+                                                <span class="eye-icon" onclick="togglePassword()">
+                                                    <i id="eye-icon" class="fa fa-eye"></i>
+                                                </span>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                
-                                                    <a href="{{ url_for('admin_bp.signup') }}">Sign-Up</a>
-                                                
+                                                <a href="{{ url_for('admin_bp.signup') }}">Sign-Up</a>
                                                 <button class="btn btn-info" type="submit">Sign In</button>
                                             </div>
                                         </form>
@@ -84,12 +85,11 @@
                     </div>
                 </main>
             </div>
-            
         </div>
         {% include 'sd_footer.html' %}
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="static/js/scripts.js"></script>
     </body>
