--- a/templates/distributor/d_all_distributor.html
+++ b/templates/distributor/d_all_distributor.html
@@ -66,6 +66,7 @@
                                 <h5 class="card-title">{{ distributor.name }}</h5>
                                 <p class="card-text"><strong>Email:</strong> {{ distributor.email }}</p>
                                 <p class="card-text"><strong>Contact:</strong> {{ distributor.contact }}</p>
+                                <p class="card-text"><strong>Super Distributor:</strong> {{ distributor.super_distributors.name }}</p>
                                 <p class="card-text">
                                     <strong>Status:</strong> 
                                     <span class="badge 
@@ -79,13 +80,26 @@
                                 </p>
                                 <!-- Action Buttons -->
                                 {% if distributor.status == 'deactivated' %}
-                                 
+                                    {% if role == 'Admin' %}
+                                        <div class="action-buttons" >
+                                            <a href="{{ url_for('distributor.lock_distributor', distributor_id=distributor.id) }}" onclick="return confirm('Are you sure you want to Unlock this Distributor {{ distributor.name }}?')" class="btn btn-success btn-sm">
+                                                <i class="bi bi-check2-circle"></i>
+                                                Unlock
+                                            </a>
+                                        </div>
+                                    {% endif %}
                                 {% else %}
                                 <div class="action-buttons">
                                     <a href="{{ url_for('distributor.edit_distributor', distributor_id=distributor.id ) }}" class="btn btn-warning btn-sm">
                                         <i class="fas fa-edit"></i> Edit</a>
                                     <a href="{{ url_for('distributor.delete_distributor', distributor_id=distributor.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Distributor?')">
                                         <i class="fas fa-trash-alt"></i> Delete</a>
+                                    {% if distributor.status == 'activated' and role == 'Admin' %}
+                                        <a href="{{ url_for('distributor.lock_distributor', distributor_id=distributor.id) }}" onclick="return confirm('Are you sure you want to Lock this Distributor {{ distributor.name }}?')" class="btn btn-secondary btn-sm">
+                                            <i class="bi bi-x-circle"></i>
+                                            Lock
+                                        </a>
+                                    {% endif %}
                                 </div>
                                 {% endif %}
                             </div>
