--- a/templates/distributor/d_index.html
+++ b/templates/distributor/d_index.html
@@ -10,36 +10,53 @@
                 <li class="breadcrumb-item active">Dashboard</li>
             </ol>
             <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-success text-white fixed-card mb-4">
-                        <div class="card-body"><b>Kitchens</b></div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0">{{ kitchen_count }}</h4>
-                            <div class="small text-white"><i class="fas fa-utensils"></i></div>
-                            <a class="small text-white stretched-link" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">View Details</a>
-                            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                <!-- Kitchen Count -->
+                <div class="col-xl-3 col-sm-6 mb-3">
+                    <div class="card text-white bg-success o-hidden h-100">
+                      <div class="card-body">
+                        <div class="card-body-icon-kit">
+                          <i class="fas fa-utensils"></i>
                         </div>
+                        <div class="mr-5"><strong>{{ kitchen_count }}  Kitchens</strong></div>
+                      </div>
+                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
+                        <span class="float-left">View Details</span>
+                        <span class="float-right">
+                        </span>
+                      </a>
                     </div>
                 </div>
+                <!-- Total Sales -->
+                <div class="col-xl-3 col-sm-6 mb-3">
+                    <div class="card text-white bg-primary o-hidden h-100">
+                      <div class="card-body">
+                        <div class="card-body-icon-sale">
+                          <i class="fa fa-chart-line"></i>
+                        </div>
+                        <div class="mr-5"><strong>₹ {{ total_price }} Total Sales</strong></div>
+                      </div>
+                      <a class="card-footer text-white clearfix small z-1" href="">
+                        <span class="float-left">View Details</span>
+                        <span class="float-right">
+                        </span>
+                      </a>
+                    </div>
+                </div>
+
                 <!-- Total Orders -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-secondary text-white fixed-card mb-4">
-                        <div class="card-body"><b>Total Orders</b></div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0">{{ order_count }}</h4>
-                            <div class="small text-white"><i class="fas fa-shopping-cart"></i></div>
-                            <a class="small text-white stretched-link" href="{{ url_for('distributor.distributor_orders') }}">View Details</a>
-                            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                <div class="col-xl-3 col-sm-6 mb-3">
+                    <div class="card text-white bg-success o-hidden h-100">
+                      <div class="card-body">
+                        <div class="card-body-icon-kit">
+                          <i class="fas fa-shopping-basket"></i>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-primary text-white fixed-card mb-4">
-                        <div class="card-body"><b>Total Sales</b></div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0">₹{{ total_price }}</h4>
-                            <div class="small text-white"><i class=""></i></div>
-                        </div>
+                        <div class="mr-5"><strong>{{ order_count }} Total Orders</strong></div>
+                      </div>
+                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('distributor.distributor_orders') }}">
+                        <span class="float-left">View Details</span>
+                        <span class="float-right">
+                        </span>
+                      </a>
                     </div>
                 </div>
             </div>
