--- a/templates/kitchen/kitchen_index.html
+++ b/templates/kitchen/kitchen_index.html
@@ -25,30 +25,29 @@
             {% endwith %}
             <div class="row">
                 <div class="col-xl-3 col-sm-6 mb-3">
-                    <div class="card text-white bg-success o-hidden h-100">
-                      <div class="card-body">
-                        <div class="card-body-icon">
-                          <i class="fa fa-fw fa-shopping-cart"></i>
-                        </div>
-                        <div class="mr-5"><b>{{ order_count }} Total Orders</b></div>
-                      </div>
-                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('order.kitchen_orders') }}">
-                        <span class="float-left">View Details</span>
-                        <span class="float-right">
-                          
-                        </span>
-                      </a>
-                    </div>
-                  </div>
-                <div class="col-xl-3 col-sm-6 mb-3">
                     <div class="card text-white bg-primary o-hidden h-100">
                       <div class="card-body">
-                        <div class="card-body-icon">
-                          <i class="fa fa-fw fa-list"></i>
+                        <div class="card-body-icon-sale">
+                          <i class="fa fa-chart-line"></i>
                         </div>
                         <div class="mr-5"><b>₹ {{ total_sales_amount }} Total Sales</b></div>
                       </div>
                       <a class="card-footer text-white clearfix small z-1" href="#">
+                        <span class="float-left">View Details</span>
+                        <span class="float-right">
+                        </span>
+                      </a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 mb-3">
+                    <div class="card text-white bg-success o-hidden h-100">
+                      <div class="card-body">
+                        <div class="card-body-icon-kit">
+                          <i class="fas fa-shopping-basket"></i>
+                        </div>
+                        <div class="mr-5"><b>{{ order_count }} Total Orders</b></div>
+                      </div>
+                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('order.kitchen_orders') }}">
                         <span class="float-left">View Details</span>
                         <span class="float-right">
                           
