--- a/templates/manager/add_manager.html
+++ b/templates/manager/add_manager.html
@@ -30,8 +30,11 @@
                 <div class="sd-row">
                     <input name="contact" type="text" placeholder="Mobile*" required>
                 </div>
-                <div class="sd-row">
-                    <input name="password" type="password" placeholder="Password*" required>
+                <div class="sd-row password-wrapper">
+                    <input id="password" name="password" type="password" placeholder="Password*" required>
+                    <span class="eye-icon" onclick="togglePassword()">
+                        <i id="eye-icon" class="fa fa-eye"></i>
+                    </span>
                 </div>
                 <div class="sd-row">
                     <label for="image">Profile Image</label>
