--- a/templates/manager/manager_header.html
+++ b/templates/manager/manager_header.html
@@ -8,6 +8,7 @@
         <meta name="author" content="" />
         <title>Dashboard - Manager</title>
         <!-- Add Bootstrap CSS link -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
@@ -62,7 +63,7 @@
                             </p>
                             <p class="text-center">
                                 <b>{{ user_name }}</b><br>
-                                {% if role == 'Admin' %}
+                                {% if role == 'Manager' %}
                                     <span class="green-dot"></span>
                                 {% endif %}
                             </p>                            
@@ -81,7 +82,7 @@
 
                                 <!-- Super Distributor Section -->
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseSuperDistributor" aria-expanded="false" aria-controls="collapseSuperDistributor">
-                                    <div class="sb-nav-link-icon"><i class="fas fa-network-wired"></i></div>
+                                    <div class="sb-nav-link-icon"><i class="fas fa-warehouse"></i></div>
                                     Super Distributor
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
@@ -135,7 +136,6 @@
                                 </a>
                             </nav>
                         </div>
-
                         <div class="sb-sidenav-footer">
                             <div class="small">Logged in as:</div>
                             {{ role }}
