--- a/templates/manager/managers.html
+++ b/templates/manager/managers.html
@@ -56,19 +56,10 @@
                                 </div>
                                 <!-- Manager Image -->
                                 {% if manager.image_base64 %}
-                                <img src="{{ manager.image_base64 }}" alt="Manager Image" class="manager-image" width="120" height="120">
+                                <img src="{{ manager.image_base64 }}" alt="Manager Image" class="manager-image" width="100" height="100">
                                 {% else %}
                                 No Image
                                 {% endif %}
-                                <!--<div class="status-dot mt-2">
-                                    {% if manager.online_status %}
-                                        <span class="green-dot"></span> Online
-                                    {% else %}
-                                        <span class="red-dot"></span> Offline
-                                    {% endif %}
-                                </div> -->
-
-                                <!-- Manager Info -->
                                 <div class="manager-info mt-3">
                                     <h5 class="card-title">{{ manager.name }}</h5>
                                     <p class="card-text"><strong>Email:</strong> {{ manager.email }}</p>
@@ -84,16 +75,29 @@
                                             {{ manager.status | capitalize }}
                                         </span>
                                     </p>
-
                                     <!-- Action Buttons -->
                                     {% if manager.status == 'deactivated' %}
-                                 
+                                        {% if role == 'Admin' %}
+                                        <div class="action-buttons" >
+                                            <a href="{{ url_for('manager.lock_manager', manager_id=manager.id) }}" onclick="return confirm('Are you sure you want to Unlock this manager {{ manager.name }}?')" class="btn btn-success btn-sm">
+                                                <i class="bi bi-check2-circle"></i>
+                                                Unlock
+                                            </a>
+                                        </div>
+                                        {% endif %}
                                     {% else %}
                                     <div class="action-buttons">
                                         <a href="{{ url_for('manager.edit_manager', manager_id=manager.id) }}" class="btn btn-warning btn-sm">
                                             <i class="fas fa-edit"></i> Edit</a>
                                         <a href="{{ url_for('manager.delete_manager', manager_id=manager.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this manager?')">
-                                            <i class="fas fa-trash-alt"></i> Delete</a>
+                                            <i class="fas fa-trash-alt"></i> Delete
+                                        </a>
+                                        {% if manager.status == 'activated' and role == 'Admin' %}
+                                            <a href="{{ url_for('manager.lock_manager', manager_id=manager.id) }}" onclick="return confirm('Are you sure you want to Lock this manager {{ manager.name }}?')" class="btn btn-secondary btn-sm">
+                                                <i class="bi bi-x-circle"></i>
+                                                Lock
+                                            </a>
+                                        {% endif %}
                                     </div>
                                     {% endif %}
                                 </div>
