--- a/templates/order/kitchen_order.html
+++ b/templates/order/kitchen_order.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     {% if orders_data %}
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered table-hover">
+                        <table class="table table-striped table-bordered table-hover" id="OrderTable">
                             <thead class="thead-dark text-center">
                                 <tr>
                                     <th>Sr No</th>
@@ -130,6 +130,8 @@
                                 {% endfor %}
                             </tbody>
                         </table>
+                        <!-- Pagination Controls -->
+                            <div class="d-flex float-right" id="pagination-controls"></div>
                     </div>
                     {% else %}
                     <div class="alert alert-info text-center">
