--- a/templates/super_distributor/edit_super_distributor.html
+++ b/templates/super_distributor/edit_super_distributor.html
@@ -32,32 +32,16 @@
                 <div class="sd-row">
                     <input name="contact" type="text" value="{{ super_distributor.contact }}" required>
                 </div>
-                <div class="sd-row">
-                    <label for="password" class="form-label">Password (Leave blank if unchanged)</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                <div class="sd-row password-wrapper">
+                    <input id="password" name="password" type="password" placeholder="Password" required>
+                    <span class="eye-icon" onclick="togglePassword()">
+                        <i id="eye-icon" class="fa fa-eye"></i>
+                    </span>
                 </div>
                 <div class="sd-row">
                     <label for="image" class="form-label">Profile Image (Optional)</label>
                     <input type="file" class="form-control-file" id="image" name="image">
                 </div>
-                <!-- <div class="sd-row">
-                    <input type="text" placeholder="Designation">
-                    <select required>
-                        <option value="" disabled selected>Select Department*</option>
-                        <option value="cardiology">Cardiology</option>
-                        <option value="neurology">Neurology</option> -->
-                        <!-- Add more options as needed -->
-                    <!-- </select>
-                </div> -->
-                <!-- <textarea class="sd-textarea" placeholder="Address"></textarea> -->
-                <!-- <div class="sd-upload">
-                    <label>Upload</label>
-                    <input type="file">
-                </div> -->
-                <!--<div class="form-group">
-                <label for="super_distributor_id">Super Distributor ID</label>
-                <input type="number" class="form-control" id="super_distributor_id" name="super_distributor_id" placeholder="Enter super distributor ID">
-                </div>-->
                 <br>
                 <div class="sd-buttons">
                     <button type="submit" class="sd-submit">Save Changes</button>
