--- a/templates/super_distributor/sd_index.html
+++ b/templates/super_distributor/sd_index.html
@@ -36,7 +36,6 @@
                         <a class="card-footer text-white clearfix small z-1" href="{{ url_for('distributor.all_distributor') }}">
                           <span class="float-left">View Details</span>
                           <span class="float-right">
-                            <i class="fa fa-angle-right"></i>
                           </span>
                         </a>
                       </div>
@@ -52,39 +51,36 @@
                       <a class="card-footer text-white clearfix small z-1" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
                         <span class="float-left">View Details</span>
                         <span class="float-right">
-                          <i class="fa fa-angle-right"></i>
                         </span>
                       </a>
                     </div>
                   </div>
                   <div class="col-xl-3 col-sm-6 mb-3">
-                      <div class="card text-white bg-primary o-hidden h-100">
+                    <div class="card text-white bg-primary o-hidden h-100">
+                      <div class="card-body">
+                        <div class="card-body-icon-sale">
+                          <i class="fa fa-chart-line"></i>
+                        </div>
+                        <div class="mr-5"><b>₹{{ total_sales_amount }} Total Sales</b></div>
+                      </div>
+                      <a class="card-footer text-white clearfix small z-1" href="#">
+                        <span class="float-left">View Details</span>
+                        <span class="float-right">
+                        </span>
+                      </a>
+                    </div>
+                </div>
+                  <div class="col-xl-3 col-sm-6 mb-3">
+                      <div class="card text-white bg-success o-hidden h-100">
                         <div class="card-body">
-                          <div class="card-body-icon">
-                            <i class="fa fa-fw fa-shopping-cart"></i>
+                          <div class="card-body-icon-kit">
+                            <i class="fas fa-shopping-basket"></i>
                           </div>
                           <div class="mr-5"><b>{{ total_orders_count }} Total Orders</b></div>
                         </div>
                         <a class="card-footer text-white clearfix small z-1" href="{{ url_for('order.kitchen_orders') }}">
                           <span class="float-left">View Details</span>
                           <span class="float-right">
-                            <i class="fa fa-angle-right"></i>
-                          </span>
-                        </a>
-                      </div>
-                  </div>
-                  <div class="col-xl-3 col-sm-6 mb-3">
-                      <div class="card text-white bg-secondary o-hidden h-100">
-                        <div class="card-body">
-                          <div class="card-body-icon">
-                            <i class="fa fa-fw fa-list"></i>
-                          </div>
-                          <div class="mr-5"><b>₹{{ total_sales_amount }} Total Sales</b></div>
-                        </div>
-                        <a class="card-footer text-white clearfix small z-1" href="#">
-                          <span class="float-left">View Details</span>
-                          <span class="float-right">
-                            <i class="fa fa-angle-right"></i>
                           </span>
                         </a>
                       </div>
