--- a/templates/manager/managers.html
+++ b/templates/manager/managers.html
@@ -43,71 +43,73 @@
             <!-- Manager Cards -->
             <div class="row">
                 {% for manager in managers %}
-                {% if filter == 'all' or manager.status == filter %}
-                    <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
-                        <div class="card manager-card">
-                            <div class="card-body manager-card-body">
-                                <div class="status-dot-container">
-                                    {% if manager.online_status %}
-                                        <span class="green-dot"></span> <span class="status-text">Online</span>
-                                    {% else %}
-                                        <span class="red-dot"></span> <span class="status-text">Offline</span>
-                                    {% endif %}
-                                </div>
-                                <!-- Manager Image -->
-                                {% if manager.image_base64 %}
-                                <img src="{{ manager.image_base64 }}" alt="Manager Image" class="manager-image" width="100" height="100">
-                                {% else %}
-                                No Image
-                                {% endif %}
-                                <div class="manager-info mt-3">
-                                    <h5 class="card-title">{{ manager.name }}</h5>
-                                    <p class="card-text"><strong>Email:</strong> {{ manager.email }}</p>
-                                    <p class="card-text"><strong>Contact:</strong> {{ manager.contact }}</p>
-                                    <p class="card-text">
-                                        <strong>Status:</strong> 
-                                        <span class="badge 
-                                            {% if manager.status == 'activated' %}
-                                                bg-success
-                                            {% else %}
-                                                bg-secondary
-                                            {% endif %}">
-                                            {{ manager.status | capitalize }}
-                                        </span>
-                                    </p>
-                                    <!-- Action Buttons -->
-                                    {% if manager.status == 'deactivated' %}
-                                        {% if role == 'Admin' %}
-                                        <div class="action-buttons" >
-                                            <a href="{{ url_for('manager.lock_manager', manager_id=manager.id) }}" onclick="return confirm('Are you sure you want to Unlock this manager {{ manager.name }}?')" class="btn btn-success btn-sm">
-                                                <i class="bi bi-check2-circle"></i>
-                                                Unlock
-                                            </a>
-                                        </div>
-                                        {% endif %}
-                                    {% else %}
-                                    <div class="action-buttons">
-                                        <a href="{{ url_for('manager.edit_manager', manager_id=manager.id) }}" class="btn btn-warning btn-sm">
-                                            <i class="fas fa-edit"></i> Edit</a>
-                                        <a href="{{ url_for('manager.delete_manager', manager_id=manager.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this manager?')">
-                                            <i class="fas fa-trash-alt"></i> Delete
-                                        </a>
-                                        {% if manager.status == 'activated' and role == 'Admin' %}
-                                            <a href="{{ url_for('manager.lock_manager', manager_id=manager.id) }}" onclick="return confirm('Are you sure you want to Lock this manager {{ manager.name }}?')" class="btn btn-secondary btn-sm">
-                                                <i class="bi bi-x-circle"></i>
-                                                Lock
-                                            </a>
+                    {% if filter == 'all' or manager.status == filter %}
+                        <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
+                            <div class="card manager-card">
+                                <div class="card-body manager-card-body">
+                                    <div class="status-dot-container">
+                                        {% if manager.online_status %}
+                                            <span class="green-dot"></span> <span class="status-text">Online</span>
+                                        {% else %}
+                                            <span class="red-dot"></span> <span class="status-text">Offline</span>
                                         {% endif %}
                                     </div>
+                                    <div class="view" style="position: absolute; top: 10px; right: 10px; display: flex;">
+                                        <a href="{{ url_for('admin_bp.view_details', user_id=manager.id )}}" class="btn btn-light btn-sm">Details</a>
+                                    </div>
+                                    <!-- Manager Image -->
+                                    {% if manager.image_base64 %}
+                                        <img src="{{ manager.image_base64 }}" alt="Manager Image" class="manager-image" width="100" height="100">
+                                    {% else %}
+                                        No Image
                                     {% endif %}
+                                    <div class="manager-info mt-3">
+                                        <h5 class="card-title">{{ manager.name }}</h5>
+                                        <p class="card-text"><strong>Email:</strong> {{ manager.email }}</p>
+                                        <p class="card-text"><strong>Contact:</strong> {{ manager.contact }}</p>
+                                        <p class="card-text">
+                                            <strong>Status:</strong> 
+                                            <span class="badge 
+                                                {% if manager.status == 'activated' %}
+                                                    bg-success
+                                                {% else %}
+                                                    bg-secondary
+                                                {% endif %}">
+                                                {{ manager.status | capitalize }}
+                                            </span>
+                                        </p>
+                                        <!-- Action Buttons -->
+                                        {% if manager.status == 'deactivated' %}
+                                            {% if role == 'Admin' %}
+                                                <div class="action-buttons">
+                                                    <a href="{{ url_for('manager.lock_manager', manager_id=manager.id) }}" onclick="return confirm('Are you sure you want to Unlock this manager {{ manager.name }}?')" class="btn btn-success btn-sm">
+                                                        <i class="bi bi-check2-circle"></i>
+                                                        Unlock
+                                                    </a>
+                                                </div>
+                                            {% endif %}
+                                        {% else %}
+                                            <div class="action-buttons">
+                                                <a href="{{ url_for('manager.edit_manager', manager_id=manager.id) }}" class="btn btn-warning btn-sm">
+                                                    <i class="fas fa-edit"></i> Edit</a>
+                                                <a href="{{ url_for('manager.delete_manager', manager_id=manager.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this manager?')">
+                                                    <i class="fas fa-trash-alt"></i> Delete
+                                                </a>
+                                                {% if manager.status == 'activated' and role == 'Admin' %}
+                                                    <a href="{{ url_for('manager.lock_manager', manager_id=manager.id) }}" onclick="return confirm('Are you sure you want to Lock this manager {{ manager.name }}?')" class="btn btn-secondary btn-sm">
+                                                        <i class="bi bi-x-circle"></i>
+                                                        Lock
+                                                    </a>
+                                                {% endif %}
+                                            </div>
+                                        {% endif %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                {% endif %}
+                    {% endif %}
                 {% endfor %}
             </div>
-
             <style>
                 .status-dot-container {
                     position: absolute;
@@ -146,5 +148,4 @@
             </style>
         </div>
     </main>
-
 {% include 'admin/admin_footer.html' %}
