--- a/templates/manager/manager_dashboard.html
+++ b/templates/manager/manager_dashboard.html
@@ -6,7 +6,7 @@
 <main>
     <div class="dashboard-container">
         <header class="dashboard-header">
-            <h1>{{ user_name }} (Role: {{ role }}), DASHBOARD</h1>
+            <h1>DASHBOARD</h1>
         </header>
         <div class="dashboard-summary">
             <div class="card">
