--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -89,9 +89,6 @@
                               <div class="mt-3">
                                 <h4>{{ user.name }}</h4>
                                 <p class="text-secondary mb-1">{{ role }}</p>
-                                {% if user.address %}
-                                  <p class="text-muted font-size-sm">{{ user.address }}</p>
-                                {% endif %}
                               </div>
                             </div>
                           </div>
@@ -105,7 +102,7 @@
                                 {% if role == 'Kitchen' %}
                                   <h6 class="mb-0">Kitchen Name</h6>
                                 {% else %}
-                                  <h6 class="mb-0">Full Name</h6>
+                                  <h6 class="mb-0">Name</h6>
                                 {% endif %}
                               </div>
                               <div class="col-sm-9 text-primary">
