--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -71,11 +71,11 @@
                                 </p> 
                             <a class="nav-link" href="{{ url_for('distributor.distributor_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Home
+                                Dashboard
                             </a>
                             <a class="nav-link" href="{{ url_for('dashboard.distributor_dashboard')}}">
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+                                Statistics
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-utensils"></i></div>
