--- a/templates/kitchen/all_kitchens.html
+++ b/templates/kitchen/all_kitchens.html
@@ -52,10 +52,7 @@
                 {% for kitchen in all_kitchens %}
                     <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
                         <div class="card manager-card">
-                            <div type="button" class="card-body manager-card-body" data-toggle="modal" data-target="#kitchenModal" 
-                                    data-name="{{ kitchen.name }}" 
-                                    data-sales="{{ kitchen.total_sales }}"
-                                    data-distributor="{{ kitchen.distributor_name }}">
+                            <div class="card-body manager-card-body">
                                 <div class="status-dot-container">
                                     {% if kitchen.online_status %}
                                         <span class="green-dot"></span> <span class="status-text">Online</span>
@@ -63,9 +60,15 @@
                                         <span class="red-dot"></span> <span class="status-text">Offline</span>
                                     {% endif %}
                                 </div>
+                                <div class="view" style="position: absolute; top: 10px; right: 10px; display: flex;">
+                                    <a class="btn btn-light btn-sm" data-toggle="modal" data-target="#kitchenModal" 
+                                    data-name="{{ kitchen.name }}" 
+                                    data-sales="{{ kitchen.total_sales }}"
+                                    data-distributor="{{ kitchen.distributor_name }}">Details</a>
+                                </div>
                                 <!-- Manager Image -->
                                 {% if kitchen.image %}
-                                    <img src="{{ kitchen.image }}" alt="Kitchen Image" class="manager-image" width="120" height="120">
+                                    <img src="{{ kitchen.image }}" alt="Kitchen Image" class="manager-image" width="100" height="100">
                                 {% else %}
                                     No Image
                                 {% endif %}
