--- a/templates/kitchen/edit_kitchen.html
+++ b/templates/kitchen/edit_kitchen.html
@@ -37,7 +37,7 @@
                     <input name="contact" type="text" value="{{ kitchen.contact }}" required>
                 </div>
                 <div class="sd-row password-wrapper">
-                    <input id="password" name="password" type="password" placeholder="Password" required>
+                    <input id="password" name="password" type="password" placeholder="Password">
                     <span class="eye-icon" onclick="togglePassword()">
                         <i id="eye-icon" class="fa fa-eye"></i>
                     </span>
