--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -125,11 +125,11 @@
                                 </p> 
                             <a class="nav-link" href="{{ url_for('kitchen.kitchen_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Home
+                                Dashboard
                             </a>
                             <a class="nav-link" href="{{ url_for('dashboard.kitchen_dashboard')}}">
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+                                Statistics
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsemenu" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
