--- a/templates/manager/add_manager.html
+++ b/templates/manager/add_manager.html
@@ -22,16 +22,16 @@
     {% endwith %}
             <form action="{{ url_for('manager.add_manager') }}" method="post" class="sd-form" enctype="multipart/form-data">
                 <div class="sd-row">
-                    <input name="name" type="text" placeholder="Full Name*" required>
+                    <input name="name" type="text" placeholder="Full Name" required>
                 </div>
                 <div class="sd-row">
-                    <input name="email" type="email" placeholder="Email*" required>
+                    <input name="email" type="email" placeholder="Email" required>
                 </div>
                 <div class="sd-row">
-                    <input name="contact" type="text" placeholder="Mobile*" required>
+                    <input name="contact" type="text" placeholder="Mobile" required>
                 </div>
                 <div class="sd-row password-wrapper">
-                    <input id="password" name="password" type="password" placeholder="Password*" required>
+                    <input id="password" name="password" type="password" placeholder="Password" required>
                     <span class="eye-icon" onclick="togglePassword()">
                         <i id="eye-icon" class="fa fa-eye"></i>
                     </span>
@@ -47,7 +47,6 @@
                 </div>
             </form>
         </div>
-        <!-- End of Add Doctor Form Content -->
     </main>
     <br>
 
