--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -26,13 +26,13 @@
             {% endwith %}
             <form action="{{ url_for('super_distributor.add_super_distributor') }}" method="post" class="sd-form">
                 <div class="sd-row">
-                    <input name="name" type="text" placeholder="Full Name*" required>
+                    <input name="name" type="text" placeholder="Super Distributor Name" required>
                 </div>
                 <div class="sd-row">
-                    <input name="email" type="email" placeholder="Email*" required>
+                    <input name="email" type="email" placeholder="Email" required>
                 </div>
                 <div class="sd-row">
-                    <input name="mobile_number" type="text" placeholder="Mobile*" required>
+                    <input name="mobile_number" type="text" placeholder="Mobile" required>
                 </div>
                 <div class="sd-row password-wrapper">
                     <input id="password" name="password" type="password" placeholder="Password*" required>
@@ -40,12 +40,6 @@
                         <i id="eye-icon" class="fa fa-eye"></i>
                     </span>
                 </div>
-                <!-- <div class="sd-row password-wrapper">
-                    <input id="re_password" type="password" placeholder="Re-Enter Password*" required>
-                    <span class="eye-icon" onclick="toggleRePassword()">
-                        <i id="re-eye-icon" class="fa fa-eye"></i>
-                    </span>
-                </div> -->
                 <div class="sd-row">
                     <label for="image">Super Distributor Image</label>
                     <input type="file" class="form-control-file" id="image" name="image">
