--- a/templates/super_distributor/sd_add_distributor.html
+++ b/templates/super_distributor/sd_add_distributor.html
@@ -27,16 +27,16 @@
             {% endwith %}
             <form action="{{ url_for('super_distributor.add_distributor') }}" method="post" class="sd-form" enctype="multipart/form-data">
                 <div class="sd-row">
-                    <input name="name" type="text" placeholder="Full Name*" required>
+                    <input name="name" type="text" placeholder="Distributor Name" required>
                 </div>
                 <div class="sd-row">
-                    <input name="email" type="email" placeholder="Email*" required>
+                    <input name="email" type="email" placeholder="Email" required>
                 </div>
                 <div class="sd-row">
-                    <input name="mobile_number" type="text" placeholder="Mobile*" required>
+                    <input name="mobile_number" type="text" placeholder="Mobile" required>
                 </div>
                 <div class="sd-row password-wrapper">
-                    <input id="password" name="password" type="password" placeholder="Password*" required>
+                    <input id="password" name="password" type="password" placeholder="Password" required>
                     <span class="eye-icon" onclick="togglePassword()">
                         <i id="eye-icon" class="fa fa-eye"></i>
                     </span>
